--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     </properties>
 
+
     <dependencies>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -43,6 +44,7 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/groovy</sourceDirectory>
 
         <pluginManagement>
             <plugins>
